# xarray_plotly

./: .release-please-config.json  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  release-please.yml  release.yml
api/: index.html
docs/: api.md  getting-started.ipynb  getting-started.md  index.md
docs/examples/: advanced.ipynb  combining.ipynb  datasets.ipynb  fast_bar.ipynb  manipulation.ipynb  plot-types.ipynb
docs/guide/: customization.md  dimension-assignment.md  plot-types.md
examples/advanced/: advanced.ipynb  index.html
examples/fast_bar/: fast_bar.ipynb
examples/manipulation/: manipulation.ipynb
examples/plot-types/: index.html  plot-types.ipynb
getting-started/: getting-started.ipynb  index.html
search/: search_index.json
stubs/: README.md  pyproject.toml
stubs-package/: README.md  pyproject.toml
stubs-package/xarray-stubs/: __init__.pyi
stubs-package/xarray_plotly_stubs/: __init__.pyi
stubs/xarray-stubs/: __init__.pyi
tests/: test_accessor.py  test_common.py  test_figures.py
xarray-stubs/: __init__.pyi
xarray_plotly/: __init__.py  accessor.py  common.py  config.py  figures.py  plotting.py
