[project]
name = "xarray_plotly_stubs"
version = "0.0.1"
description = "Type stubs for xarray_plotly"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Felix" }]
keywords = ["xarray", "plotly", "stubs", "typing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Stubs Only",
]
dependencies = [
    "xarray_plotly",
]

[project.urls]
Homepage = "https://github.com/felix/xarray_plotly"
Repository = "https://github.com/felix/xarray_plotly"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xarray_plotly_stubs*", "xarray-stubs*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
