[project]
name = "xarray-plotly-stubs"
version = "0.1.0"
description = "Type stubs for xarray-plotly accessor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Felix" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Stubs Only",
]
dependencies = [
    "xarray>=2023.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xarray-stubs"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
